bug fixes
- the attack cooldown now correctly resets on game restart.

- prevented the cows names overflowing and pushing the return home button out of place.

--- a/src/style.css
+++ b/src/style.css
@@ -242,6 +242,12 @@ button:hover{
     float: right;
 }
 
+#villagerName{
+    display: inline-block;
+    width: 70%;
+    overflow-x: hidden;
+}
+
 .component{
     background: var(--color-divBG);
     margin: 0px 0px 5px 5px;
